rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
spec:
  selector:
    matchLabels:
      app: rest
  replicas: 1
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
      - name: rest
        image: utsavag/kt-search-rest:v10
        imagePullPolicy: Always
---
