rest/rest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kt-search-ingress
  namespace: default
spec:
  defaultBackend:
    service:
      name: rest
      port:
        number: 8088
---
